Article dummy images
Added a folder of images that will load faster for local development.

Signed-off-by: Eivind Birkedal <Eivind.Birkedal@gmail.com>

--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
 	<div class="container">
 		<div class="row">
 			<section class="article span3">
-				<img src="http://dummyimage.com/400x560/000/fff" alt="Article image" >
+				<img src="/artimage/400560b.jpeg" alt="Article image" >
 				<h1><a href="art1.html">Eventyrlig økserock</h1>
 			</section>
 
 			<section class="article span6">
-				<img src="http://dummyimage.com/600x400/000/fff" alt="Article image">
+				<img src="/artimage/600400.jpeg" alt="Article image">
 				<h1>Den store ville vesten-festen</h1>
 				<p>Then the Guardian of the Gates put on his own glasses and told them he was ready to show them to the Palace.</p>
 			</section>
 
 			<section class="article span3">
-				<img src="http://dummyimage.com/400x560/000/fff" alt="Article image" >
+				<img src="/artimage/400560.jpeg" alt="Article image" >
 				<h1>Eventyrlig økserock</h1>
 			</section>
 			
@@ -68,36 +68,37 @@
 
 		<div class="row">
 			<div id="multimediarow">
-				<div class="span2"><img src="http://dummyimage.com/360x360/000/fff" alt=""><p>Aenean eu leo quam.</p></div>
-				<div class="span2"><img src="http://dummyimage.com/360x360/000/fff" alt=""><p>Aenean eu leo quam. </p></div>
-				<div class="span2"><img src="http://dummyimage.com/360x360/000/fff" alt=""><p>Aenean eu leo quam. </p></div>
-				<div class="span2"><img src="http://dummyimage.com/360x360/000/fff" alt=""><p>Aenean eu leo quam. </p></div>
-				<div class="span2"><img src="http://dummyimage.com/360x360/000/fff" alt=""><p>Aenean eu leo quam. </p></div>
-				<div class="span2"><img src="http://dummyimage.com/360x360/000/fff" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam.</p></div>
+				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
+				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
 			</div>
 		</div>
 
 		<div class="row v-margin">
 			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
+				<img src="/artimage/400250.jpeg" alt="Article image" >
 				<h1>Eventyrlig økserock</h1>
 			</section>
 
 			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
+				<img src="/artimage/400250.jpeg" alt="Article image" >
 				<h1>Eventyrlig økserock</h1>
 			</section>
 
 			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Eventyrlig økserock</h1>
+				<p><h2>Siv Andersen blir TIRC-leder</h2></p>
+				<p><h2>Eventyrlig økserock</h2></p>
+				<p><h2>Siv Andersen blir TIRC-leder</h2></p>
 			</section>
 		</div>
 
 		<div class="row">
 				<div class="span6">
 			<section class="article">
-				<img src="http://dummyimage.com/600x400/000/fff" alt="Article image">
+				<img src="/artimage/600400.jpeg" alt="Article image">
 				<h1>Den store ville vesten-festen</h1>
 				<p>Then the Guardian of the Gates put on his own glasses and told them he was ready to show them to the Palace.</p>
 			</section>
@@ -105,14 +106,14 @@
 
 		<div class="span3" id="secondary-column">
 			<section class="article">
-				<img src="http://dummyimage.com/400x560/000/fff" alt="Article image" >
+				<img src="/artimage/400560.jpeg" alt="Article image" >
 				<h1>Eventyrlig økserock</h1>
 			</section>
 		</div>
 
 		<div class="span3" id="secondary-column">
 			<section class="article">
-				<img src="http://dummyimage.com/400x560/000/fff" alt="Article image" >
+				<img src="/artimage/400560b.jpeg" alt="Article image" >
 				<h1>Eventyrlig økserock</h1>
 			</section>
 	
@@ -120,7 +121,7 @@
 
 		<div class="span12">
 			<section class="article">
-				<img src="http://dummyimage.com/1200x400/000/fff">
+				<img src="/artimage/1200400.jpeg">
 				<h1>Eventyrlig økserock</h1>
 			</section>
 		</div>	
