--- a/rep.html
+++ b/rep.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Dusken.no</title>
+	<title>Dusken.no - Barcraftig utvikling</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/font.less">
@@ -43,16 +43,17 @@
 	</header>
 
 	<div class="container">
-
-		<div class="article span12">
-			<section class="repmainimage">
-				<img src="http://dummyimage.com/1920x900/000/fff" alt="Article image" >
+		<div class="row">
+		<div class="article">
+			<section class="repmainimage span12">
+				<img src="/artimage/1920900.jpg" alt="Article image" >
 			</section>
-			<section class="reportasje">
+			<section class="reportasje span12">
 				<h1 id="barcraftigutvikling">Barcraftig utvikling</h1>
 
 				<p><em>Dataspill er mer sosialt enn du tror.</em></p>
-
+				<div class="row">
+					<div class="span6">
 				<p>Det er søndagskveld på fotballpuben Three Lions. Støyfaktoren er høy, folk drikker øl og det er god stemning. Det er imidlertid ikke de vanlige fotballentusiastene som befinner seg her denne kvelden. Klientellet er yngre, og fotballdraktene og -skjerfene er byttet ut med t-skjorter hvor det står MarineKing, eller TeamLiquid. Det er ikke Manchester United mot Liverpool som skal vises på skjermene i dag. De fremmøtte er der for å se profesjonelle Starcraft 2-spillere kjemper om førstepremien i den største dataspillturneringen i USA, Major League Gaming (MLG). I likhet med flere hundre tusen andre, på barer og foran dataskjermer rundt om i verden, har 150 nerder samlet seg for å se e-sportsatletene konkurrere om en premiepott på 440000 kroner, overført live fra Columbus, Ohio.</p>
 
 				<p>Øl og dataspill
@@ -87,7 +88,9 @@
 
 				<p>Fenomenet Barcraft fyller fotballpuben Three Lions med dataspillentusiaster.
 				Han lever av å spille SC2, og regnes som den beste spilleren i Norge. Han har blant annet deltatt i turneringer i Brasil og Korea, og vant nylig en stor onlineturnering med over 30.000 kroner i førstepremie. Snute var tidligere musikkteknologistudent ved NTNU, men etter å ha vunnet et par norske turneringer så han at han kunne leve av å spille SC2. Han bestemte seg da for å satse fulltid på e-sporten.</p>
+				</div>
 					<p class="quoteacross">Å være profesjonell SC2-spiller er hardt arbeid.</p>
+				
 				<p>– Å være profesjonell SC2-spiller er hardt arbeid. Det er en fulltidsjobb, og for å konkurrere i toppen må man legge ned minst åtte timer hver dag. Mine ambisjoner er høye. Jeg håper å kunne reise til USA for å kvalifisere meg til MLG, og hvis alt går som det skal kommer jeg til å reise til Sør-Korea for å hevde meg blant verdens beste, sier Snute.</p>
 
 				<p>Elektronisk stemning
@@ -105,10 +108,11 @@
 				Etter mange timer står det to spillere igjen i finalen. Terran-spilleren MarineKing og hans nemesis, zerg-spilleren DRG. Spenningen er til å ta og føle på, og finalen blir en neglbitende affære. MarineKings usedvanlige strategier utfordrer DRG sine evner til å multitaske. Det virker som MarineKings styrker er overalt, og selv om DRG klarer å slå ham tilbake gang på gang, blir han til slutt overmannet. MarineKing viser seg å være den beste spilleren i kveld, og vinner finalen til slutt, til stormende jubel og trampeklapp. Han tar dermed med seg pokalen, og førstepremien på 145000 kroner. Det har blitt søndagsnatt, og etter mange timer med øldrikking og e-sport drar folk fornøyde hjem. Pubeieren Adrian Douglas bekrefter at Barcraft er noe de kommer til å satse videre på.</p>
 
 				<p>– Dette er flott for puben, og vi kommer til å jobbe for å gjøre det enklere å gjennomføre slike arrangementer. Det vi har skapt her er fantastisk, sier Douglas.</p>
-			</print>
+			</div>
+			</section>
 		</div>
 
-
+	</div>
 	</div> <!-- end container -->
 		
 	<footer>
