Fix av Rep.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<li><i class="icon-pencil"></i><a href="">Reportasje</a></li>
 					<li><i class="icon-bullhorn"></i><a href="">Debatt</a></li>
 				</ul>
-			</div>
+			</div>	</div>
 		</nav>
 
 	</header>
