Endret img src i artikkel

--- a/rep.html
+++ b/rep.html
@@ -45,7 +45,7 @@
 	<div class="container">
 		<div class="row article">
 			<section class="repmainimage span12">
-				<img src="/artimage/1920900.jpg" alt="Article image" >
+				<img src="/artimage/400250.jpeg" alt="Article image" >
 			</section>
 			<section class="reportasje span12">
 				<h1 id="barcraftigutvikling">Barcraftig utvikling</h1>
