Endret på blockquote

--- a/rep.html
+++ b/rep.html
@@ -90,9 +90,11 @@
 					<p>Fenomenet Barcraft fyller fotballpuben Three Lions med dataspillentusiaster.
 					Han lever av å spille SC2, og regnes som den beste spilleren i Norge. Han har blant annet deltatt i turneringer i Brasil og Korea, og vant nylig en stor onlineturnering med over 30.000 kroner i førstepremie. Snute var tidligere musikkteknologistudent ved NTNU, men etter å ha vunnet et par norske turneringer så han at han kunne leve av å spille SC2. Han bestemte seg da for å satse fulltid på e-sporten.</p>
 				</div>
+
 				<div class="span12">
-					<p class="quoteacross">Å være profesjonell SC2-spiller er hardt arbeid.</p>
+					<blockquote cite="http://www.worldwildlife.org/who/index.html" class="quoteacross">Å være profesjonell SC2-spiller er hardt arbeid.</blockquote>
 				</div>
+
 				<div class="span8 offset2">
 					<p>– Å være profesjonell SC2-spiller er hardt arbeid. Det er en fulltidsjobb, og for å konkurrere i toppen må man legge ned minst åtte timer hver dag. Mine ambisjoner er høye. Jeg håper å kunne reise til USA for å kvalifisere meg til MLG, og hvis alt går som det skal kommer jeg til å reise til Sør-Korea for å hevde meg blant verdens beste, sier Snute.</p>
 				</div>
