--- a/rep.html
+++ b/rep.html
@@ -26,7 +26,7 @@
 			</nav>
 			<input type="search" name="global-search" id="global-search" placeholder="Søk">
 		</div>
-		
+
 		<nav class="container" id="category-menu">
 			<div class="row">
 				<ul class="span12">
@@ -51,8 +51,11 @@
 
 				<p><em>Dataspill er mer sosialt enn du tror.</em></p>
 			<div class="row">
+				
 				<div class="span8">
-					<p>Det er søndagskveld på fotballpuben Three Lions. Støyfaktoren er høy, folk drikker øl og det er god stemning. Det er imidlertid ikke de vanlige fotballentusiastene som befinner seg her denne kvelden. Klientellet er yngre, og fotballdraktene og -skjerfene er byttet ut med t-skjorter hvor det står MarineKing, eller TeamLiquid. Det er ikke Manchester United mot Liverpool som skal vises på skjermene i dag. De fremmøtte er der for å se profesjonelle Starcraft 2-spillere kjemper om førstepremien i den største dataspillturneringen i USA, Major League Gaming (MLG). I likhet med flere hundre tusen andre, på barer og foran dataskjermer rundt om i verden, har 150 nerder samlet seg for å se e-sportsatletene konkurrere om en premiepott på 440000 kroner, overført live fra Columbus, Ohio.</p></div>
+					<p>Det er søndagskveld på fotballpuben Three Lions. Støyfaktoren er høy, folk drikker øl og det er god stemning. Det er imidlertid ikke de vanlige fotballentusiastene som befinner seg her denne kvelden. Klientellet er yngre, og fotballdraktene og -skjerfene er byttet ut med t-skjorter hvor det står MarineKing, eller TeamLiquid. Det er ikke Manchester United mot Liverpool som skal vises på skjermene i dag. De fremmøtte er der for å se profesjonelle Starcraft 2-spillere kjemper om førstepremien i den største dataspillturneringen i USA, Major League Gaming (MLG). I likhet med flere hundre tusen andre, på barer og foran dataskjermer rundt om i verden, har 150 nerder samlet seg for å se e-sportsatletene konkurrere om en premiepott på 440000 kroner, overført live fra Columbus, Ohio.</p>
+				</div>
+				<img src="/artimage/sc1.jpg">
 				<div class="span8 offset4">
 					<h2>Øl og dataspill</h2>
 					<p>«Åtte soldater lander i hovedbasen til Parting, samtidig som hæren til MarineKing truer fronten hans. Klarer Protoss-spilleren å kontrollere styrkene sine på begge fronter, uten at han mister for mange arbeidere?!» Kameraet skifter fort frem og tilbake, mens to kommentatorer gjør sitt beste for å holde tritt med spillerne som begge hamrer løs på tastaturene sine i en hastighet på flere hundre trykk i minuttet. En fullstappet bar holder pusten i det de ser på Partings forsøk på å holde seg i live mot MarineKings styrker, som angriper fra alle kanter.</p>
