Img i artikkel. Problem er enda ikke løst.

--- a/rep.html
+++ b/rep.html
@@ -98,9 +98,10 @@
 					<blockquote cite="http://www.worldwildlife.org/who/index.html" class="quoteacross">Å være profesjonell SC2-spiller er hardt arbeid.</blockquote>
 				</div>
 
-				<div class="span8 offset2">
+				<div class="span8">
 					<p>– Å være profesjonell SC2-spiller er hardt arbeid. Det er en fulltidsjobb, og for å konkurrere i toppen må man legge ned minst åtte timer hver dag. Mine ambisjoner er høye. Jeg håper å kunne reise til USA for å kvalifisere meg til MLG, og hvis alt går som det skal kommer jeg til å reise til Sør-Korea for å hevde meg blant verdens beste, sier Snute.</p>
 				</div>
+
 				<div class="span8">
 					<h2>Elektronisk stemning</h2>
 					<p>Engasjementet i baren stiger i takt med promillenivået. I bakgrunnen analyserer kommentatorne hvert minste trekk spillerne gjør, og når Terran-spilleren MarineKings styrker møter Partings Protoss-hær tar det helt av. Mens MarineKing setter opp en avansert flankemanøver prøver de to kommentatorene å overdøve hverandre, og hele puben sitter på kanten av stolene sine i det den ene kvartfinalen avgjøres. Lydnivået i baren stiger idet den sør-koreanske publikumsfavoritten MarineKing utmanøvrer sin landsmann Parting. Seieren blir møtt med rungende applaus fra Terran-spillerne rundt om i lokalet, mens de som heier på Protoss ser skuffet ned i ølglassene sine.</p>
@@ -113,6 +114,11 @@
 
 					<p>Etter kampen diskuteres strategiene og trekkene til spillerene. Det er mange meninger i rommet, og det er omtrent like mange SC2-eksperter her som det er sofadommere på en vanlig fotballkveld.</p>
 				</div>
+
+				<div class="span4">
+					<img src="artimage/sc1.jpg" alt="">
+				</div>
+
 				<div class="span8 offset2">
 					<h2>Lenge leve kongen</h2>
 					<p>Etter mange timer står det to spillere igjen i finalen. Terran-spilleren MarineKing og hans nemesis, zerg-spilleren DRG. Spenningen er til å ta og føle på, og finalen blir en neglbitende affære. MarineKings usedvanlige strategier utfordrer DRG sine evner til å multitaske. Det virker som MarineKings styrker er overalt, og selv om DRG klarer å slå ham tilbake gang på gang, blir han til slutt overmannet. MarineKing viser seg å være den beste spilleren i kveld, og vinner finalen til slutt, til stormende jubel og trampeklapp. Han tar dermed med seg pokalen, og førstepremien på 145000 kroner. Det har blitt søndagsnatt, og etter mange timer med øldrikking og e-sport drar folk fornøyde hjem. Pubeieren Adrian Douglas bekrefter at Barcraft er noe de kommer til å satse videre på.</p>
