Added img to rep.html

--- a/rep.html
+++ b/rep.html
@@ -55,7 +55,9 @@
 				<div class="span8">
 					<p>Det er søndagskveld på fotballpuben Three Lions. Støyfaktoren er høy, folk drikker øl og det er god stemning. Det er imidlertid ikke de vanlige fotballentusiastene som befinner seg her denne kvelden. Klientellet er yngre, og fotballdraktene og -skjerfene er byttet ut med t-skjorter hvor det står MarineKing, eller TeamLiquid. Det er ikke Manchester United mot Liverpool som skal vises på skjermene i dag. De fremmøtte er der for å se profesjonelle Starcraft 2-spillere kjemper om førstepremien i den største dataspillturneringen i USA, Major League Gaming (MLG). I likhet med flere hundre tusen andre, på barer og foran dataskjermer rundt om i verden, har 150 nerder samlet seg for å se e-sportsatletene konkurrere om en premiepott på 440000 kroner, overført live fra Columbus, Ohio.</p>
 				</div>
-				<img src="/artimage/sc1.jpg">
+				<div class="span4">
+					<img src="/artimage/sc1.jpg">
+				</div>	
 				<div class="span8 offset4">
 					<h2>Øl og dataspill</h2>
 					<p>«Åtte soldater lander i hovedbasen til Parting, samtidig som hæren til MarineKing truer fronten hans. Klarer Protoss-spilleren å kontrollere styrkene sine på begge fronter, uten at han mister for mange arbeidere?!» Kameraet skifter fort frem og tilbake, mens to kommentatorer gjør sitt beste for å holde tritt med spillerne som begge hamrer løs på tastaturene sine i en hastighet på flere hundre trykk i minuttet. En fullstappet bar holder pusten i det de ser på Partings forsøk på å holde seg i live mot MarineKings styrker, som angriper fra alle kanter.</p>
@@ -72,6 +74,9 @@
 
 					<p>Det er tydelig at dette er populært, allerede klokken 19 er det få sitteplasser igjen å skimte. Flesteparten av de som er kommet er unge studenter. Med ølglass i hånda diskuterer de kveldens kommende kamper, og det er klart at de er minst like engasjerte som den jevne fotballsupporter.</p>
 				</div>
+				<div class="span4">
+					<img src="/artimage/sc3.jpg">
+				</div>	
 				<div class="span8 offset4">
 					<h2>Større enn du tror</h2>
 					<p>– Min første reaksjon når de kom med forespørselen var: «Er dere gale?». Jeg kunne ikke tro at folk ville komme for å se noen spille et dataspill, forteller Adrian Douglas, eieren av Three Lions.</p>
