Header Menu consistensy/customization, Debate page created
Fixed copy text and links in the header menu of sites, as well as
create a HTML document for the Debate layout to be created.

Also added native images to Art1.htmls Related Stories row.

--- a/art1.html
+++ b/art1.html
@@ -45,10 +45,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="span8">
-					<section class="span 12 article">
-						<img src="http://dummyimage.com/600x400/000/fff" alt="Article image">
-						<h1 >Den store ville vesten-festen</h1>
-					</section>
+				<img src="/artimage/400600.jpeg" alt="Article image">
+				<h1 >Den store ville vesten-festen</h1>
 			</div>
 
 			<div class="span8">
@@ -104,23 +102,39 @@
 		
 		<div class="span2">
 				<section class="article">
-				<img src="http://dummyimage.com/600x400/000/fff" alt="Article image">	
+				<img src="/artimage/600400.jpeg" alt="Article image">	
 				</section>
 			</div>
 
 			<div class="span2">
 				<section class="article">
-				<img src="http://dummyimage.com/600x400/000/fff" alt="Article image">	
+				<img src="/artimage/600400.jpeg" alt="Article image">	
 				</section>
 			</div>
 
 			<div class="span2">
 				<section class="article">
-				<img src="http://dummyimage.com/600x400/000/fff" alt="Article image">	
+				<img src="/artimage/600400.jpeg" alt="Article image">	
+				</section>
+			</div>
+
+			<div class="span2">
+				<section class="article">
+				<img src="/artimage/600400.jpeg" alt="Article image">	
 				</section>
 			</div>
 		</div>
 	</div>
+
+	<footer>
+		<div class="footer">
+			<div id="contact">
+			<p><i class="icon-user"></i>Ansvarlig Redaktør: Eivind Digranes</p>
+			<p><i class="icon-envelope"></i> <a href="mailto:redaktor@dusken.no">redaktor@dusken.no</a></p>
+			<p><i class="icon-phone"></i> +4799939393</p>
+			</div>
+		</div>
+	</footer>
 
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/less-1.3.0.min.js"></script>
