--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Dusken.no</title>
+	<title>Dusken.no - Forside</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/font.less">
@@ -35,11 +35,10 @@
 					<li><i class="icon-beaker"></i><a href="">Teknologi</a></li>
 					<li><i class="icon-globe"></i><a href="">Sport</a></li>
 					<li><i class="icon-pencil"></i><a href="">Reportasje</a></li>
-					<li><i class="icon-bullhorn"></i><a href="">Debatt</a></li>
+					<li><i class="icon-bullhorn"></i><a href="debatt.html">Debatt</a></li>
 				</ul>
 			</div>
 		</nav>
-
 	</header>
 
 	<div class="container">
@@ -68,7 +67,7 @@
 
 		<div class="row">
 			<div id="multimediarow">
-				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam.</p></div>
+				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>CTRL+ALT+DELETE Episode 8</p></div>
 				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
 				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
 				<div class="span2"><img src="/artimage/mediabar.jpg" alt=""><p>Aenean eu leo quam. </p></div>
@@ -96,7 +95,7 @@
 		</div>
 
 		<div class="row">
-				<div class="span6">
+			<div class="span6">
 			<section class="article">
 				<img src="/artimage/600400.jpeg" alt="Article image">
 				<h1>Den store ville vesten-festen</h1>
@@ -125,6 +124,7 @@
 				<h1>Eventyrlig økserock</h1>
 			</section>
 		</div>	
+	</div>	<!-- end row -->
 
 	</div> <!-- end container -->
 		
