--- a/rep.html
+++ b/rep.html
@@ -35,7 +35,7 @@
 					<li><i class="icon-beaker"></i><a href="">Teknologi</a></li>
 					<li><i class="icon-globe"></i><a href="">Sport</a></li>
 					<li><i class="icon-pencil"></i><a href="">Reportasje</a></li>
-					<li><i class="icon-bullhorn"></i><a href="">Debatt</a></li>
+					<li><i class="icon-bullhorn"></i><a href="debatt.html">Debatt</a></li>
 				</ul>
 			</div>
 		</nav>
