--- a/tv.html
+++ b/tv.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Dusken.no</title>
+	<title>Dusken.no - Student-TV</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/font.less">
@@ -33,13 +33,11 @@
 					<li><i class="icon-fire"></i><a href="">Nyheter</a></li>
 					<li><i class="icon-film"></i><a href="">Kultur</a></li>
 					<li><i class="icon-beaker"></i><a href="">Teknologi</a></li>
-					<li><i class="icon-globe"></i><a href="">Sport</a></li>
 					<li><i class="icon-pencil"></i><a href="">Reportasje</a></li>
-					<li><i class="icon-bullhorn"></i><a href="">Debatt</a></li>
+					<li><i class="icon-bullhorn"></i><a href="">Samfundsmøter</a></li>
 				</ul>
 			</div>
 		</nav>
-
 	</header>
 
 	<div class="container">
