--- a/radio.html
+++ b/radio.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/font.less">
+	<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen" />
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,900,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet/less" href="font/FontAwesome/less/font-awesome.less">
 </head>
@@ -45,14 +46,32 @@
 	<div class="container">
 		<div class="row v-margin">
 			<section class="article span10">
-				<img src="http://dummyimage.com/1000x200/000/fff" alt="Article image" >
+			    <div id="wrapper">
+			        <div id="slider-wrapper">
+			            <div id="slider" class="nivoSlider">
+			                <img src="atimage/cadbanner.jpg" alt="" />
+			            </div>
+			        </div>
+			    </div>
 			</section>
 		</div>	
 
 		<div class="row v-margin">
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Alle elsker Mandag</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Blyforgiftning</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Bokbaren</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
@@ -64,51 +83,7 @@
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
-				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
-			</section>
-
-			<section class="article span2">
-				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
-				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
-			</section>
-
-			<section class="article span2">
-				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
-				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
-			</section>
-		</div>
-
-		<div class="row v-margin">
-			<section class="article span2">
-				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
-				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
-			</section>
-
-			<section class="article span2">
-				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
-				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
-			</section>
-
-			<section class="article span2">
-				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
-				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
-			</section>
-
-			<section class="article span2">
-				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
-				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
-			</section>
-
-			<section class="article span2">
-				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Den Folkelige Timen</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 		</div>
@@ -116,31 +91,31 @@
 		<div class="row v-margin">
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Den Nasjonale Studentradiolista</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Fakta på Laurbær</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Farfisa Speedster</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Feber</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Filmofil</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 		</div>
@@ -148,31 +123,94 @@
 		<div class="row v-margin">
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Glubus</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Hagelangs</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<p>Hittegodsklinikken</p>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Irie Radio</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<h2>Ctrl Alt Delete</h2>
+				<h2>Kara Fra Sahara</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+		</div>
+
+		<div class="row v-margin">
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Katarsis</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Lydsjokket</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Nashville</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Nesten Helg</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Postkåkk</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+		</div>
+				<div class="row v-margin">
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Påtirsdah</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Technovikingene</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Tweed</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Uillustrert Vitenskap</h2>
+				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
+			</section>
+
+			<section class="article span2">
+				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
+				<h2>Postkåkk</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 		</div>
@@ -189,6 +227,13 @@
 	</footer>
 
 	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/less-1.3.0.min.js"></script>
+	<script type="text/javascript" src="js/less-1.3.0.min.js"></script
+    	<script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
+    	<script type="text/javascript" src="js/jquery-1.4.3.min.js"></script>
+    	<script type="text/javascript">
+    	$(window).load(function() {
+ 		$('#slider').nivoSlider();
+    	});
+    </script>	
 </body>
 </html>
