1 more image to slider

--- a/radio.html
+++ b/radio.html
@@ -50,6 +50,7 @@
 			        <div id="slider-wrapper">
 			            <div id="slider" class="nivoSlider">
 			                <img src="atimage/cadbanner.jpg" alt="" />
+			                <img src="atimage/cadbanner.jpg" alt="" />
 			            </div>
 			        </div>
 			    </div>
