--- a/radio.html
+++ b/radio.html
@@ -46,14 +46,7 @@
 	<div class="container">
 		<div class="row v-margin">
 			<section class="article span10">
-			    <div id="wrapper">
-			        <div id="slider-wrapper">
-			            <div id="slider" class="nivoSlider">
-			                <img src="atimage/cadbanner.jpg" alt="" />
-			                <img src="atimage/cadbanner.jpg" alt="" />
-			            </div>
-			        </div>
-			    </div>
+<img src="artimage/cadbanner.jpg" alt="Slider placeholder" />
 			</section>
 		</div>	
 
@@ -228,13 +221,6 @@
 	</footer>
 
 	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/less-1.3.0.min.js"></script
-    	<script type="text/javascript" src="js/jquery.nivo.slider.pack.js"></script>
-    	<script type="text/javascript" src="js/jquery-1.4.3.min.js"></script>
-    	<script type="text/javascript">
-    	$(window).load(function() {
- 		$('#slider').nivoSlider();
-    	});
-    </script>	
+	<script type="text/javascript" src="js/less-1.3.0.min.js"></script>
 </body>
 </html>
