--- a/rep.html
+++ b/rep.html
@@ -52,19 +52,19 @@
 				<p><em>Dataspill er mer sosialt enn du tror.</em></p>
 			<div class="row">
 				
-				<div class="span8">
+				<div class="span8 artblock">
 					<p>Det er søndagskveld på fotballpuben Three Lions. Støyfaktoren er høy, folk drikker øl og det er god stemning. Det er imidlertid ikke de vanlige fotballentusiastene som befinner seg her denne kvelden. Klientellet er yngre, og fotballdraktene og -skjerfene er byttet ut med t-skjorter hvor det står MarineKing, eller TeamLiquid. Det er ikke Manchester United mot Liverpool som skal vises på skjermene i dag. De fremmøtte er der for å se profesjonelle Starcraft 2-spillere kjemper om førstepremien i den største dataspillturneringen i USA, Major League Gaming (MLG). I likhet med flere hundre tusen andre, på barer og foran dataskjermer rundt om i verden, har 150 nerder samlet seg for å se e-sportsatletene konkurrere om en premiepott på 440000 kroner, overført live fra Columbus, Ohio.</p>
 				</div>
 				<div class="span4">
 					<img src="/artimage/sc1.jpg">
 				</div>	
-				<div class="span8 offset4">
+				<div class="span8 offset4 artblock">
 					<h2>Øl og dataspill</h2>
 					<p>«Åtte soldater lander i hovedbasen til Parting, samtidig som hæren til MarineKing truer fronten hans. Klarer Protoss-spilleren å kontrollere styrkene sine på begge fronter, uten at han mister for mange arbeidere?!» Kameraet skifter fort frem og tilbake, mens to kommentatorer gjør sitt beste for å holde tritt med spillerne som begge hamrer løs på tastaturene sine i en hastighet på flere hundre trykk i minuttet. En fullstappet bar holder pusten i det de ser på Partings forsøk på å holde seg i live mot MarineKings styrker, som angriper fra alle kanter.</p>
 
 					<p>Fenomenet kalles Barcraft, og startet på en bar i Seattle våren 2011. I en tråd på nettsiden reddit.com ble brukerne oppfordret til å samle seg på en bar for å se Starcraft 2(SC2)-kamper på storskjerm. Etter denne spede begynnelsen har Barcraft eksplodert. Nå samles nerder månedlig over hele verden for å se de største spillerne kjempe om store premiepotter. Fra å være en liten nisjeting for nerder, har e-sport blitt en kjempeindustri. MLG hadde over 3.5 millioner unike seere i løpet av 2011, og de beste spillerne er sponset av selskaper som Coca-Cola og Red Bull.</p>
 				</div>
-				<div class="span8">
+				<div class="span8 artblock">
 					<h2>E-sport for alle</h2>
 					<p>– Barcraft er rett og slett arrangement hvor folk samles for å ta seg en øl og se på SC2, forteller Espen Nersveen, som sammen med Anders Storsveen står for barcraftarrangementene i Trondheim.</p>
 
@@ -77,7 +77,7 @@
 				<div class="span4">
 					<img src="/artimage/sc3.jpg">
 				</div>	
-				<div class="span8 offset4">
+				<div class="span8 offset4 artblock">
 					<h2>Større enn du tror</h2>
 					<p>– Min første reaksjon når de kom med forespørselen var: «Er dere gale?». Jeg kunne ikke tro at folk ville komme for å se noen spille et dataspill, forteller Adrian Douglas, eieren av Three Lions.</p>
 
@@ -89,7 +89,7 @@
 
 					<p>– Det er intelligente folk. I motsetning til mange fotballfans som skriker bare for å skrike, er SC2-tilskuerne mer opptatte av gode manøvrer og taktikk, sier Douglas.</p>
 				</div>
-				<div class="span8 offset2">
+				<div class="span8 offset2 artblock">
 					<h2>Det norske håpet</h2>
 					<p>Som toppidrettsutøvere har de beste SC2-spillerne en konkurransementalitet utenom det vanlige. For å kunne konkurrere i toppen må de hele tiden jobbe med å forbedre sine strategier. De beste spillerne utfører flere hundre handlinger i minuttet, noe som gjør at spillet ikke bare krever strategisk tenkning, men også en god dose fingerferdighet.</p>
 
@@ -99,15 +99,15 @@
 					Han lever av å spille SC2, og regnes som den beste spilleren i Norge. Han har blant annet deltatt i turneringer i Brasil og Korea, og vant nylig en stor onlineturnering med over 30.000 kroner i førstepremie. Snute var tidligere musikkteknologistudent ved NTNU, men etter å ha vunnet et par norske turneringer så han at han kunne leve av å spille SC2. Han bestemte seg da for å satse fulltid på e-sporten.</p>
 				</div>
 
-				<div class="span12">
+				<div class="span12 artblock">
 					<blockquote cite="http://www.worldwildlife.org/who/index.html" class="quoteacross">Å være profesjonell SC2-spiller er hardt arbeid.</blockquote>
 				</div>
 
-				<div class="span8">
+				<div class="span8 artblock">
 					<p>– Å være profesjonell SC2-spiller er hardt arbeid. Det er en fulltidsjobb, og for å konkurrere i toppen må man legge ned minst åtte timer hver dag. Mine ambisjoner er høye. Jeg håper å kunne reise til USA for å kvalifisere meg til MLG, og hvis alt går som det skal kommer jeg til å reise til Sør-Korea for å hevde meg blant verdens beste, sier Snute.</p>
 				</div>
 
-				<div class="span8">
+				<div class="span8 artblock">
 					<h2>Elektronisk stemning</h2>
 					<p>Engasjementet i baren stiger i takt med promillenivået. I bakgrunnen analyserer kommentatorne hvert minste trekk spillerne gjør, og når Terran-spilleren MarineKings styrker møter Partings Protoss-hær tar det helt av. Mens MarineKing setter opp en avansert flankemanøver prøver de to kommentatorene å overdøve hverandre, og hele puben sitter på kanten av stolene sine i det den ene kvartfinalen avgjøres. Lydnivået i baren stiger idet den sør-koreanske publikumsfavoritten MarineKing utmanøvrer sin landsmann Parting. Seieren blir møtt med rungende applaus fra Terran-spillerne rundt om i lokalet, mens de som heier på Protoss ser skuffet ned i ølglassene sine.</p>
 
@@ -124,7 +124,7 @@
 					<img src="artimage/sc1.jpg" alt="">
 				</div>
 
-				<div class="span8 offset2">
+				<div class="span8 offset2 artblock">
 					<h2>Lenge leve kongen</h2>
 					<p>Etter mange timer står det to spillere igjen i finalen. Terran-spilleren MarineKing og hans nemesis, zerg-spilleren DRG. Spenningen er til å ta og føle på, og finalen blir en neglbitende affære. MarineKings usedvanlige strategier utfordrer DRG sine evner til å multitaske. Det virker som MarineKings styrker er overalt, og selv om DRG klarer å slå ham tilbake gang på gang, blir han til slutt overmannet. MarineKing viser seg å være den beste spilleren i kveld, og vinner finalen til slutt, til stormende jubel og trampeklapp. Han tar dermed med seg pokalen, og førstepremien på 145000 kroner. Det har blitt søndagsnatt, og etter mange timer med øldrikking og e-sport drar folk fornøyde hjem. Pubeieren Adrian Douglas bekrefter at Barcraft er noe de kommer til å satse videre på.</p>
 
