--- a/radio.html
+++ b/radio.html
@@ -46,7 +46,7 @@
 	<div class="container">
 		<div class="row v-margin">
 			<section class="article span10">
-<img src="artimage/cadbanner.jpg" alt="Slider placeholder" />
+<img src="http://placehold.it/800x200" alt="Slider placeholder" />
 			</section>
 		</div>	
 
