Deleted Nivo Slider and inserted place holder

--- a/art1.html
+++ b/art1.html
@@ -102,25 +102,29 @@
 		
 		<div class="span2">
 				<section class="article">
-				<img src="/artimage/600400.jpeg" alt="Article image">	
+				<img src="http://placehold.it/600x400" alt="Article image">
+				<p>Den store ville vesten-festen</p>	
 				</section>
 			</div>
 
 			<div class="span2">
 				<section class="article">
-				<img src="/artimage/600400.jpeg" alt="Article image">	
+				<img src="http://placehold.it/600x400" alt="Article image">	
+				<p>Den store ville vesten-festen</p>	
 				</section>
 			</div>
 
 			<div class="span2">
 				<section class="article">
-				<img src="/artimage/600400.jpeg" alt="Article image">	
+				<img src="http://placehold.it/600x400" alt="Article image">	
+				<p>Den store ville vesten-festen</p>	
 				</section>
 			</div>
 
 			<div class="span2">
 				<section class="article">
-				<img src="/artimage/600400.jpeg" alt="Article image">	
+				<img src="http://placehold.it/600x400" alt="Article image">	
+				<p>Den store ville vesten-festen</p>	
 				</section>
 			</div>
 		</div>
