--- a/debatt.html
+++ b/debatt.html
@@ -42,9 +42,30 @@
 	</header>
 
 	<div class="container">
-	<div class="row">
-	</div>
+		<div class="row article">
+			<section class="feature opinion span6">
+				<a href=/art1.html><img src="http://placehold.it/600x400"></a>
+				<a href=/art1.html><h1>Promotert debattinnlegg</h1></a>
+				<p>Ola Normann - President i Studentistan</p>
+			</section>
+			<section class="list opinion span6">
+				
+				<p><a href=/art1.html><h1>Dette er en mindre viktig diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+				<p><a href=/art1.html><h1>Og enda en</h1></a>
+					Ola Normann - President i Studentistan</p>
+				<p><a href=/art1.html><h1>Og nok en diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+			
+			</section>
+		</div>
+		<div class="row">
+				<ul class="nav nav-tabs nav-stacked">
+					<li><a href="/diskusjon=c">SiT</li>
+					<li>Samfundet</li>
+					<li>Lånekassen</li>
+				</ul>
+		</div>		
 	</div><!-- end container -->
+		
 		<footer>
 		<div class="footer fullwidth">
 			<div id="contact">
