--- a/index.html
+++ b/index.html
@@ -4,27 +4,32 @@
 	<meta charset="UTF-8">
 	<title>Dusken.no - Forside</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/bootstrap-responsive.css">
 	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/font.less">
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,900,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet/less" href="font/FontAwesome/less/font-awesome.less">
 </head>
 <body>
-	<header id="global-header" class="navbar navbar-fixed-top">
+	<header id="global-header" class="">
 		<div class="container">
-			<a href="#">	
-				<h1 id="main-logo"><a href=index.html>Dusken.no</a></h1>
-			</a>
-
-			<nav id="main-menu">
-				<ul>
-					<li><a href="index.HTML">Nyheter</a></li>
-					<li><a href="TV.HTML">TV</a></li>
-					<li><a href="radio.HTML">Radio</a></li>
-					<li><a href="#">Live</a></li>
-				</ul>
-			</nav>
-			<input type="search" name="global-search" id="global-search" placeholder="Søk">
+			<div class="row">
+				<div class="span12">
+					<a href="#">	
+						<h1 id="main-logo"><a href=index.html>Dusken.no</a></h1>
+					</a>
+					
+					<nav id="main-menu">
+						<ul>
+							<li><a href="index.HTML">Nyheter</a></li>
+							<li><a href="TV.HTML">TV</a></li>
+							<li><a href="radio.HTML">Radio</a></li>
+							<li><a href="#">Live</a></li>
+						</ul>
+					</nav>
+					<input type="search" name="global-search" id="global-search" placeholder="Søk">
+				</div>
+			</div>
 		</div>
 
 		<nav class="container" id="category-menu">
