--- a/debatt.html
+++ b/debatt.html
@@ -24,14 +24,16 @@
 					<li><a href="#">Live</a></li>
 				</ul>
 			</nav>
-			<input type="search" name="global-search" id="global-search" placeholder="Søk">
+			<form class="navbar-search pull-left">
+  			<input type="text" class="search-query" placeholder="Search">
+			</form>
 		</div>
 
 		<nav class="container" id="category-menu">
 			<div class="row">
 				<ul class="span12">
 					<li><i class="icon-fire"></i><a href="">Nyheter</a></li>
-					<li><i class="icon-film"></i><a href="">Kultur</a></li>
+					<li><i class="icon-fil	m"></i><a href="">Kultur</a></li>
 					<li><i class="icon-beaker"></i><a href="">Teknologi</a></li>
 					<li><i class="icon-globe"></i><a href="">Sport</a></li>
 					<li><i class="icon-pencil"></i><a href="">Reportasje</a></li>
@@ -60,9 +62,13 @@
 		</div>
 		<div class="row">
 				<ul class="nav nav-tabs nav-stacked">
+					<li><a href="">Alle</a></li>
+					<li><a href="">Studielån</a></li>
+					<li><a href="">Hybler</a></li>
+					<li><a href="">Undervisning</a></li>
 					<li><a href="/diskusjon=c">SiT</li>
-					<li>Samfundet</li>
-					<li>Lånekassen</li>
+					<li><a href="">Samfundet</a></li>
+					<li><a href="">Lånekassen</a></li>
 				</ul>
 		</div>		
 =======
