Span to Debatt-menu

--- a/debatt.html
+++ b/debatt.html
@@ -80,7 +80,7 @@
 			</section>
 		</div>
 		<div class="row">
-				<ul class="nav nav-tabs nav-stacked">
+				<ul class="nav nav-tabs nav-stacked span3">
 					<li><a href="">Alle</a></li>
 					<li><a href="">Studielån</a></li>
 					<li><a href="">Hybler</a></li>
