Fikset header. Igjen.

--- a/debatt.html
+++ b/debatt.html
@@ -13,22 +13,6 @@
 	<header id="global-header" class="">
 		<div class="container">
 
-			<a href="#">	
-				<h1 id="main-logo"><a href=index.html>Dusken.no</a></h1>
-			</a>
-
-			<nav id="main-menu">
-				<ul>
-					<li><a href="index.HTML">Nyheter</a></li>
-					<li><a href="TV.HTML">TV</a></li>
-					<li><a href="radio.HTML">Radio</a></li>
-					<li><a href="#">Live</a></li>
-				</ul>
-			</nav>
-			<form class="navbar-search pull-left">
-  			<input type="text" class="search-query" placeholder="Search">
-			</form>
-
 			<div class="row">
 				<div class="span12">
 					<a href="#">	
@@ -80,13 +64,13 @@
 		</div>
 		<div class="row">
 				<ul class="nav nav-tabs nav-stacked span3">
-					<li><a href="">Alle</a></li>
-					<li><a href="">Studielån</a></li>
-					<li><a href="">Hybler</a></li>
-					<li><a href="">Undervisning</a></li>
-					<li><a href="/diskusjon=c">SiT</li>
-					<li><a href="">Samfundet</a></li>
-					<li><a href="">Lånekassen</a></li>
+					<li><a href="#">Alle</a></li>
+					<li><a href="#">Studielån</a></li>
+					<li><a href="#">Hybler</a></li>
+					<li><a href="#">Undervisning</a></li>
+					<li><a href="#">SiT</li>
+					<li><a href="#">Samfundet</a></li>
+					<li><a href="#">Lånekassen</a></li>
 				</ul>
 		</div>
 	<div class="row">
