--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 			<div class="row">
 				<div class="span12">
 					<a href="#">	
-						<h1 id="main-logo"><a href=index.html>Dusken.no</a></h1>
+						<h1 id="main-logo"><a href="index.html">Dusken.no</a></h1>
 					</a>
 					
 					<nav id="main-menu">
 						<ul>
-							<li><a href="index.HTML">Nyheter</a></li>
-							<li><a href="TV.HTML">TV</a></li>
-							<li><a href="radio.HTML">Radio</a></li>
-							<li><a href="#">Live</a></li>
+							<li><a href="index.html">Nyheter</a></li>
+							<li><a href="tv.html">TV</a></li>
+							<li><a href="radio.html">Radio</a></li>
+							<li><a href="live.html">Live</a></li>
 						</ul>
 					</nav>
 					<input type="search" name="global-search" id="global-search" placeholder="Søk">
@@ -39,7 +39,7 @@
 					<li><i class="icon-film"></i><a href="">Kultur</a></li>
 					<li><i class="icon-beaker"></i><a href="">Teknologi</a></li>
 					<li><i class="icon-globe"></i><a href="">Sport</a></li>
-					<li><i class="icon-pencil"></i><a href="">Reportasje</a></li>
+					<li><i class="icon-pencil"></i><a href="reportasje.html">Reportasje</a></li>
 					<li><i class="icon-bullhorn"></i><a href="debatt.html">Debatt</a></li>
 				</ul>
 			</div>
