Globale oppdateringer i header

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<img src="/artimage/400560.jpeg" alt="Article image" >
 				<h1>Eventyrlig økserock</h1>
 			</section>
-			
+
 		</div>
 
 		<div class="row">
@@ -101,47 +101,49 @@
 
 		<div class="row">
 			<div class="span6">
-			<section class="article">
-				<img src="/artimage/600400.jpeg" alt="Article image">
-				<h1>Den store ville vesten-festen</h1>
-				<p>Then the Guardian of the Gates put on his own glasses and told them he was ready to show them to the Palace.</p>
-			</section>
-		</div>
-
-		<div class="span3" id="secondary-column">
-			<section class="article">
-				<img src="/artimage/400560.jpeg" alt="Article image" >
-				<h1>Eventyrlig økserock</h1>
-			</section>
-		</div>
-
-		<div class="span3" id="secondary-column">
-			<section class="article">
-				<img src="/artimage/400560b.jpeg" alt="Article image" >
-				<h1>Eventyrlig økserock</h1>
-			</section>
-	
-		</div>
-
-		<div class="span12">
-			<section class="article">
-				<img src="/artimage/1200400.jpeg">
-				<h1>Eventyrlig økserock</h1>
-			</section>
-		</div>	
-	</div>	<!-- end row -->
-
-	</div> <!-- end container -->
-		
-	<footer>
-		<div class="footer">
-			<div id="contact">
-			<p><i class="icon-user"></i>Ansvarlig Redaktør: Eivind Digranes</p>
-			<p><i class="icon-envelope"></i> <a href="mailto:redaktor@dusken.no">redaktor@dusken.no</a></p>
-			<p><i class="icon-phone"></i> +4799939393</p>
+				<section class="article">
+					<img src="/artimage/600400.jpeg" alt="Article image">
+					<h1>Den store ville vesten-festen</h1>
+					<p>Then the Guardian of the Gates put on his own glasses and told them he was ready to show them to the Palace.</p>
+				</section>
 			</div>
-		</div>
-	</footer>
+
+			<div class="span3" id="secondary-column">
+				<section class="article">
+					<img src="/artimage/400560.jpeg" alt="Article image" >
+					<h1>Eventyrlig økserock</h1>
+				</section>
+			</div>
+
+			<div class="span3" id="secondary-column">
+				<section class="article">
+					<img src="/artimage/400560b.jpeg" alt="Article image" >
+					<h1>Eventyrlig økserock</h1>
+				</section>
+
+			</div>
+
+			<div class="span12">
+				<section class="article">
+					<img src="/artimage/1200400.jpeg">
+					<h1>Eventyrlig økserock</h1>
+				</section>
+			</div>	
+		</div>	<!-- end row -->
+
+
+		<footer>
+			<div class="row">
+				<div class="footer span12">
+					<div id="contact">
+						<p><i class="icon-user"></i>Ansvarlig Redaktør: Eivind Digranes</p>
+						<p><i class="icon-envelope"></i> <a href="mailto:redaktor@dusken.no">redaktor@dusken.no</a></p>
+						<p><i class="icon-phone"></i> +4799939393</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</div> <!-- end container -->
 
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/less-1.3.0.min.js"></script>
