--- a/live.html
+++ b/live.html
@@ -2,9 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<title>Dusken.no - Student-TV</title>
+	<title>Dusken.no - Live</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/bootstrap-responsive.css">
+	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/font.less">
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,900,300' rel='stylesheet' type='text/css'>
@@ -46,74 +47,6 @@
 		</nav>
 	</header>
 
-	<div class="container">
-		<div class="row">
-			<section class="article span8">
-				<img src="http://dummyimage.com/800x500/000/fff" alt="Article image" >
-				<h1>Eventyrlig økserock</h1>
-			</section>
-
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image">
-				<h1>Den store ville vesten-festen</h1>
-			</section>
-		</div>
-
-		<div class="row v-margin">
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Samfundmøtets høydepunkt</h1>
-			</section>
-
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Påsketur i fjellet</h1>
-			</section>
-
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Eksamensnerver</h1>
-			</section>
-		</div>
-
-		<div class="row v-margin">
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Samfundmøtets høydepunkt</h1>
-			</section>
-
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Påsketur i fjellet</h1>
-			</section>
-
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Eksamensnerver</h1>
-			</section>
-		</div>
-
-		<div class="row v-margin">
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Samfundmøtets høydepunkt</h1>
-			</section>
-
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Påsketur i fjellet</h1>
-			</section>
-
-			<section class="article span4">
-				<img src="http://dummyimage.com/400x250/000/fff" alt="Article image" >
-				<h1>Eksamensnerver</h1>
-			</section>
-		</div>
-
-
-
-	</div> <!-- end container -->
-		
 	<footer>
 		<div class="footer">
 			<div id="contact">
