--- a/artikkel.html
+++ b/artikkel.html
@@ -10,21 +10,25 @@
 	<link rel="stylesheet/less" href="font/FontAwesome/less/font-awesome.less">
 </head>
 <body>
-	<header id="global-header" class="navbar navbar-fixed-top">
+	<header id="global-header" class="">
 		<div class="container">
-			<a href="#">	
-				<h1 id="main-logo"><a href=index.html>Dusken.no</a></h1>
-			</a>
-
-			<nav id="main-menu">
-				<ul>
-					<li><a href="index.HTML">Nyheter</a></li>
-					<li><a href="TV.HTML">TV</a></li>
-					<li><a href="radio.HTML">Radio</a></li>
-					<li><a href="#">Live</a></li>
-				</ul>
-			</nav>
-			<input type="search" name="global-search" id="global-search" placeholder="Søk">
+			<div class="row">
+				<div class="span12">
+					<a href="#">	
+						<h1 id="main-logo"><a href="index.html">Dusken.no</a></h1>
+					</a>
+					
+					<nav id="main-menu">
+						<ul>
+							<li><a href="index.html">Nyheter</a></li>
+							<li><a href="tv.html">TV</a></li>
+							<li><a href="radio.html">Radio</a></li>
+							<li><a href="live.html">Live</a></li>
+						</ul>
+					</nav>
+					<input type="search" name="global-search" id="global-search" placeholder="Søk">
+				</div>
+			</div>
 		</div>
 
 		<nav class="container" id="category-menu">
@@ -34,12 +38,11 @@
 					<li><i class="icon-film"></i><a href="">Kultur</a></li>
 					<li><i class="icon-beaker"></i><a href="">Teknologi</a></li>
 					<li><i class="icon-globe"></i><a href="">Sport</a></li>
-					<li><i class="icon-pencil"></i><a href="">Reportasje</a></li>
-					<li><i class="icon-bullhorn"></i><a href="">Debatt</a></li>
+					<li><i class="icon-pencil"></i><a href="reportasje.html">Reportasje</a></li>
+					<li><i class="icon-bullhorn"></i><a href="debatt.html">Debatt</a></li>
 				</ul>
 			</div>
 		</nav>
-
 	</header>
 
 	<div class="container">
@@ -69,8 +72,6 @@
 					<p>Quisque malesuada tempor ipsum, sit amet ultricies elit congue nec. Nulla facilisi. Suspendisse erat nisl, convallis eget gravida et, mollis a nibh. Donec facilisis ornare erat, non mattis arcu blandit tincidunt. Proin at odio sed ipsum malesuada molestie at lobortis ante. Etiam vestibulum turpis convallis lectus dapibus quis ornare dolor sodales. Sed non ipsum eget dolor dapibus euismod ac ut nulla.</p>
 
 					<p>Proin vulputate, quam nec pretium consequat, purus turpis scelerisque mauris, quis facilisis metus lacus quis dui. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi non urna a tellus auctor congue pulvinar a nisl. Etiam consectetur condimentum sapien, vitae gravida velit venenatis et. Vestibulum pretium neque quis risus aliquet ultricies. Praesent odio ligula, commodo at congue ut, elementum ut libero. Praesent varius, sem vitae fringilla dignissim, elit velit pulvinar purus, quis iaculis diam libero id mi. In hac habitasse platea dictumst. Duis pretium ante porttitor turpis pulvinar mollis vel gravida dui.</p>
-
-
 				</section>
 			</div>
 
