--- a/debatt.html
+++ b/debatt.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Dusken.no - Debatt</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap-responsive.css">
 	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/font.less">
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,900,300' rel='stylesheet' type='text/css'>
@@ -12,28 +13,6 @@
 <body>
 	<header id="global-header" class="">
 		<div class="container">
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-=======
-			<a href="#">	
-				<h1 id="main-logo"><a href=index.html>Dusken.no</a></h1>
-			</a>
-
-			<nav id="main-menu">
-				<ul>
-					<li><a href="index.HTML">Nyheter</a></li>
-					<li><a href="TV.HTML">TV</a></li>
-					<li><a href="radio.HTML">Radio</a></li>
-					<li><a href="#">Live</a></li>
-				</ul>
-			</nav>
-			<form class="navbar-search pull-left">
-  			<input type="text" class="search-query" placeholder="Search">
-			</form>
->>>>>>> Removed bloat menu list.
-=======
->>>>>>> shiz
 			<div class="row">
 				<div class="span12">
 					<a href="#">	
@@ -85,7 +64,6 @@
 		</div>
 		<div class="row">
 				<ul class="nav nav-tabs nav-stacked span3">
-<<<<<<< HEAD
 					<li><a href="#">Alle</a></li>
 					<li><a href="#">Studielån</a></li>
 					<li><a href="#">Hybler</a></li>
@@ -93,8 +71,9 @@
 					<li><a href="#">SiT</li>
 					<li><a href="#">Samfundet</a></li>
 					<li><a href="#">Lånekassen</a></li>
-=======
+
 					<li><h2>Tema</h2></li>
+
 					<li><a href="">Alle</a></li>
 					<li><a href="">Studielån</a></li>
 					<li><a href="">Hybler</a></li>
@@ -102,7 +81,6 @@
 					<li><a href="">SiT</li>
 					<li><a href="">Samfundet</a></li>
 					<li><a href="">Lånekassen</a></li>
->>>>>>> Removed bloat menu list.
 				</ul>
 		</div>
 
