--- a/reportasje.html
+++ b/reportasje.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Dusken.no - Barcraftig utvikling</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap-responsive.css">
 	<link rel="stylesheet/less" href="css/style.less">
 	<link rel="stylesheet/less" href="css/font.less">
 	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,900,300' rel='stylesheet' type='text/css'>
