Changes Image folder to /Images and added Orbit Slider

--- a/artikkel.html
+++ b/artikkel.html
@@ -48,7 +48,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="span8">
-				<img src="/artimage/600400.jpeg" alt="Article image">
+				<img src="/images/articleimage/600400.jpeg" alt="Article image">
 				<h1 >Den store ville vesten-festen</h1>
 			</div>
 
