--- a/radio.html
+++ b/radio.html
@@ -133,7 +133,7 @@
 
 			<section class="article span2">
 				<img src="http://dummyimage.com/200x200/000/fff" alt="Article image" >
-				<p>Hittegodsklinikken</p>
+				<h2>Hittegodsklinikken</h2>
 				<p>Ctrl+Alt+Del tar deg med til den vidunderlige verden dataspill er.</p>
 			</section>
 
