--- a/reportasje.html
+++ b/reportasje.html
@@ -49,7 +49,7 @@
 	<div class="container">
 		<div class="row article">
 			<section class="repmainimage span12">
-				<img src="/artimage/400250.jpeg" alt="Article image" >
+				<img src="/images/articleimage/400250.jpeg" alt="Article image" >
 			</section>
 
 			<section class="reportasje span12">
@@ -63,7 +63,7 @@
 					</div>
 
 					<div class="span12">
-						<img src="/artimage/sc1.jpg">
+						<img src="/images/articleimage/sc1.jpg">
 					</div>	
 
 					<div class="span8 offset4 artblock">
@@ -85,7 +85,7 @@
 					</div>
 
 					<div class="span4">
-						<img src="/artimage/sc3.jpg">
+						<img src="/images/articleimage/sc3.jpg">
 					</div>	
 
 					<div class="span8 offset4 artblock">
