--- a/debatt.html
+++ b/debatt.html
@@ -86,12 +86,14 @@
 
 	</div><!-- end container -->
 		
-		<footer>
-		<div class="footer fullwidth">
-			<div id="contact">
-				<p>Ansvarlig Redaktør: Eivind Digranes <i class="icon-user"></i></p>
-				<p><a href="mailto:redaktor@dusken.no">redaktor@dusken.no <i class="icon-envelope"></i></a></p>
-				<p>+4799939393 <i class="icon-phone"></i></p>
+	<footer>
+		<div class="row">
+			<div class="footer span12">
+				<div id="contact">
+					<p><i class="icon-user"></i>Ansvarlig Redaktør: Eivind Digranes</p>
+					<p><i class="icon-envelope"></i> <a href="mailto:redaktor@dusken.no">redaktor@dusken.no</a></p>
+					<p><i class="icon-phone"></i> +4799939393</p>
+				</div>
 			</div>
 		</div>
 	</footer>
