--- a/artikkel.html
+++ b/artikkel.html
@@ -67,7 +67,7 @@
 
 					<p>Praesent odio sapien, lobortis non pellentesque mollis, tincidunt at dolor. Cras aliquet risus sed sem lacinia in placerat dolor viverra. In semper porta libero at luctus. Praesent semper quam ac purus tristique ultricies. In tincidunt velit ut augue auctor tincidunt. Cras suscipit arcu auctor enim pulvinar ac sodales nibh auctor. In nunc urna, varius id porta id, convallis id nunc. Fusce posuere, dolor ac vestibulum aliquet, odio enim tempor massa, eget pulvinar turpis diam non magna. Maecenas imperdiet leo vel augue aliquam ornare.</p>
 
-					<p class="quoteacross">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>	
+					<p class="quoteacross">Lorem ipsum amet, consectetur adipisicing elit.</p>	
 
 					<p>Integer congue orci viverra lacus vestibulum pretium. Aenean et neque a dui tincidunt hendrerit. Curabitur sit amet lorem eget nunc lacinia posuere nec in lacus. Cras orci justo, bibendum id luctus vitae, varius vitae mauris. Nam ipsum libero, consequat non convallis ut, auctor quis ligula. Nullam non eros mauris. Phasellus porttitor sapien eu ipsum tempus congue. Nam non consequat turpis.</p>
 
