Added debate section details

--- a/debatt.html
+++ b/debatt.html
@@ -59,29 +59,35 @@
 				<p><a href=/art1.html><h1>Og enda en</h1></a>
 					Ola Normann - President i Studentistan</p>
 				<p><a href=/art1.html><h1>Og nok en diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+				<p><a href=/art1.html><h1>Og nok en diskusjon</h1></a>Ola Normann - President i Studentistan</p>
 			
 			</section>
 		</div>
+
 		<div class="row">
-				<ul class="nav nav-tabs nav-stacked span3">
-					<li><a href="#">Alle</a></li>
-					<li><a href="#">Studielån</a></li>
-					<li><a href="#">Hybler</a></li>
-					<li><a href="#">Undervisning</a></li>
-					<li><a href="#">SiT</li>
-					<li><a href="#">Samfundet</a></li>
-					<li><a href="#">Lånekassen</a></li>
-
-					<li><h2>Tema</h2></li>
-
-					<li><a href="">Alle</a></li>
-					<li><a href="">Studielån</a></li>
-					<li><a href="">Hybler</a></li>
-					<li><a href="">Undervisning</a></li>
-					<li><a href="">SiT</li>
-					<li><a href="">Samfundet</a></li>
-					<li><a href="">Lånekassen</a></li>
-				</ul>
+			<div class="span12 temamenu"><h1>Tema</h1></div>
+			
+			<ul class="nav nav-tabs nav-stacked span3">
+				<li><a href="#">Alle</a></li>
+				<li><a href="#">Studielån</a></li>
+				<li><a href="#">Hybler</a></li>
+				<li><a href="#">Undervisning</a></li>
+				<li><a href="#">SiT</a></li>
+				<li><a href="#">Samfundet</a></li>
+				<li><a href="#">Lånekassen</a></li>
+			</ul>
+			<section class="list opinion span6">
+				<p><a href=/art1.html><h1>Dette er en mindre viktig diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+				<p><a href=/art1.html><h1>Dette er en mindre viktig diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+				<p><a href=/art1.html><h1>Dette er en mindre viktig diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+				<p><a href=/art1.html><h1>Dette er en mindre viktig diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+				<p><a href=/art1.html><h1>Dette er en mindre viktig diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+				<p><a href=/art1.html><h1>Dette er en mindre viktig diskusjon</h1></a>Ola Normann - President i Studentistan</p>
+			</section>
+			<section class="list opinion bar span3">
+				<a href=""><img src="http://placehold.it/200x400"></a>
+				<p><h2>Sidebar discussion</h2></p>
+			</section>	
 		</div>
 
 	</div><!-- end container -->
